# oho-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  example.oho  lang.md  readme.md  xmake.lua
include/: instruction.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp  utils.hpp
src/: interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  utils.cpp
